# z-message

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/: config.py  database.py  logger_config.py  main.py  whatsapp.py
